spacing fix on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -283,11 +283,11 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 150px;
+        padding-top: 100px;
     }
 
     .download-section {
-        padding: 150px 0;
+        padding: 100px 0;
     }
 
     #map {
